--- a/index.html
+++ b/index.html
@@ -11,265 +11,237 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Coffee Shop</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="custom.css">
+  <script src="custom.js" defer></script>
 </head>
 
 <body>
   <header>
-    <div class="container bl-flex jc-sb h-50 ai-center">
-      <div class="header_logo"><img src="https://www.coffeebeancompany.co.uk/app/themes/coffeebean/images/logo.png"
-          alt="The Coffe Bean Company" /></div>
-      <a href="https://www.coffeebeancompany.co.uk/"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">
+        <img src="img/stir.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        CofFee Beans
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
 
-      <div class="inner">
-        <div class="nav_icon">
-          <span></span>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Drinks
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" data-toggle="modal" data-target="#exampleModal" href="espresso.html">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">espresso</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
         </div>
-        <nav class="header_nav_body">
-          <ul class="bl-flex">
-            <li><a class="nav_items" href="#">Sākums</a></li>
-
-            <li>
-              <a class="nav_items" href="#"> Pakalpojumi</a>
-              <ul class="submenu">
-                <li><a href="#">Konsultējam</a></li>
-                <li><a href="#">Piegāde</a></li>
-                <li><a href="#">Apmaksa</a></li>
-              </ul>
-            </li>
-            <li>
-              <a class="nav_items" href="#"> Dzērieni</a>
-              <ul class="submenu">
-                <li><a href="#">Espresso</a></li>
-                <li><a href="#">Americano</a></li>
-                <li><a href="#">Flat White</a></li>
-                <li><a href="#">Cappucino</a></li>
-                <li><a href="#">Latte</a></li>
-                <li><a href="#">Irish</a></li>
-
-              </ul>
-            </li>
-            <li><a class="nav_items" href="#"> Par Mums</a></li>
-            <li><a class="nav_items" href="#"> Kontakti</a></li>
-
-          </ul>
-        </nav>
       </div>
     </div>
-  </header>
-
-  <section class="bg-top">
-    <div class="container bl-flex ai-center jc-center vh100">
-      <div class="kafija">
-        <h1>Svaigi grauzdētas pupiņu šķirnes katra vēlmēm</h1>
+    <section class="bg-top">
+      <div class="container bl-flex ai-center jc-center vh100">
+        <div class="kafija">
+          <h1 id="klase">Svaigi grauzdētas pupiņu šķirnes katra vēlmēm</h1>
 
 
 
 
 
+        </div>
       </div>
-    </div>
 
-  </section>
-
+    </section>
 
 
-  <div class="container bl-flex jc-sb">
-    <div class="col-3">
-      <img
-        src="https://images.unsplash.com/photo-1587738108058-10ad47447b86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-        alt="">
-      <p>Arabika kafijas pupiņas </p>
-    </div>
-    <div class="col-3">
-      <img
-        src="https://images.unsplash.com/photo-1587738108001-570c22f9063d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-        alt="">
-      <p>Robusta kafijas pupiņas</p>
 
-
-    </div>
-    <div class="col-3">
-      <img
-        src="https://images.unsplash.com/photo-1531645762072-b4ce0546c7a8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-        alt="">
-      <p>Luwax arabica kafijas pupiņas</p>
-    </div>
-  </div>
-
-
-  </div>
-
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-          src="https://images.unsplash.com/photo-1485808191679-5f86510681a2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+    <div class="container bl-flex jc-sb img-2">
+      <div class="col-3">
+        <img class="attels"
+          src="https://images.unsplash.com/photo-1587738108058-10ad47447b86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
           alt="">
+        <p>Arabika kafijas pupiņas </p>
       </div>
-      <div class="carousel-item">
+      <div class="col-3">
         <img
-          src="https://images.unsplash.com/photo-1501843508755-af0829d48618?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          class="d-block w-100" alt="">
-      </div>
-      <div class="carousel-item">
-        <img
-          src="https://images.unsplash.com/photo-1558019939-63dfb181280b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img
-          src="https://images.unsplash.com/photo-1515437591178-719645b75ccb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img
-          src="https://images.unsplash.com/photo-1563090308-5a7889e40542?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img
-          src="https://images.unsplash.com/photo-1515701238541-0cb8d3165120?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-          class="d-block w-100" alt="...">
-      </div>
+          src="https://images.unsplash.com/photo-1587738108001-570c22f9063d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          alt="">
+        <p>Robusta kafijas pupiņas</p>
 
 
+      </div>
+      <div class="col-3">
+        <img
+          src="https://images.unsplash.com/photo-1531645762072-b4ce0546c7a8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          alt="">
+        <p>Luwax arabica kafijas pupiņas</p>
+      </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  <div class="bg-info clearfix">
-    <button type="button" class="btn btn-secondary float-left">Example Button floated left</button>
-    <button type="button" class="btn btn-secondary float-right">Example Button floated right</button>
-  </div>
+    </div>
 
-  <section class="bg-info py-4">
+    <!-- Carousel -->
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-6 order-1 order-md-0">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2177.534585775532!2d24.09427327260227!3d56.92250546846532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eed04aa24840e7%3A0xb2357990c9c7e888!2sKoku%20iela%2015%2C%20Zemgales%20priek%C5%A1pils%C4%93ta%2C%20R%C4%ABga%2C%20LV-1004!5e0!3m2!1slv!2slv!4v1589307257910!5m2!1slv!2slv"
-            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-            tabindex="0">
-          </iframe>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/danielle-macinnes-IuLgi9PWETU-unsplash(1).jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/mike-kenneally-tNALoIZhqVM-unsplash(1).jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/nathan-dumlao-6VhPY27jdps-unsplash(1).jpg" alt="Third slide">
+          </div>
         </div>
-
-        <div class="col-12 col-md-6 order-0 order-md-1">
-          <form>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <section class="bg-info py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 order-1 order-md-0">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2177.534585775532!2d24.09427327260227!3d56.92250546846532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eed04aa24840e7%3A0xb2357990c9c7e888!2sKoku%20iela%2015%2C%20Zemgales%20priek%C5%A1pils%C4%93ta%2C%20R%C4%ABga%2C%20LV-1004!5e0!3m2!1slv!2slv!4v1589307257910!5m2!1slv!2slv"
+              width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+              tabindex="0">
+            </iframe>
+          </div>
+          <!-- carousel end -->
+          <div class="col-12 col-md-6 order-0 order-md-1">
             <form>
-              <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3">
+              <form>
+                <div class="form-group row">
+                  <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                  <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3">
+                  </div>
                 </div>
-              </div>
-              <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3">
+                <div class="form-group row">
+                  <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                  <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword3">
+                  </div>
                 </div>
-              </div>
 
 
-              <div class="form-group row">
-                <div class="col-sm-10">
-                  <button type="submit" class="btn btn-primary">Sign in</button>
+                <div class="form-group row">
+                  <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                  </div>
                 </div>
-              </div>
-            </form>
+              </form>
 
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="container">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="img\COFFEE B ROLL - Daniel Schiffer Inspired.mp4"></iframe>
+      </div>
+
+    </div>
+
+    <footer>
+
+      <div class="container bl-flex jc-sb ai-center h100">
+        <div class="footer__logo"></div>
+        <div class="footer__bloki">
+          <div class="footer__col-3">
+            <ul>
+              <li>Privātuma politika</li>
+
+            </ul>
+          </div>
+
+          <div class="footer__col-3">
+            <ul>
+
+              <li>Atziņas </li>
+
+
+            </ul>
+          </div>
+
+          <div class="footer__col-3">
+            <ul>
+
+              <li>Kontakti</li>
+              <li><a id="ctl07_pagefooter_1_hplPhone" title="Telefons" href="tel:%20+371%29887012">+371 29887012</a>
+              </li>
+              <li><a id="ctl07_pagefooter_1_hplEmail" title="E-pasts"
+                  href="mailto:%20coffebean@company.lv">coffebean@company.lv</a></li>
+
+
+            </ul>
+          </div>
+          <div class="footer__col-3">
+            <ul>
+
+              <li>Copyright © 2020 </li>
+
+
+            </ul>
+          </div>
 
         </div>
       </div>
-    </div>
-  </section>
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
-      allowfullscreen></iframe>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <footer>
-
-    <div class="container bl-flex jc-sb ai-center h100">
-      <div class="footer__logo"></div>
-      <div class="footer__bloki">
-        <div class="footer__col-3">
-          <ul>
-            <li>Privātuma politika</li>
-
-          </ul>
-        </div>
-
-        <div class="footer__col-3">
-          <ul>
-
-            <li>Atziņas </li>
-
-
-          </ul>
-        </div>
-
-        <div class="footer__col-3">
-          <ul>
-
-            <li>Kontakti</li>
-            <li><a id="ctl07_pagefooter_1_hplPhone" title="Telefons" href="tel:%20+371%29887012">+371 29887012</a></li>
-            <li><a id="ctl07_pagefooter_1_hplEmail" title="E-pasts"
-                href="mailto:%20coffebean@company.lv">coffebean@company.lv</a></li>
-
-
-          </ul>
-        </div>
-        <div class="footer__col-3">
-          <ul>
-
-            <li>Copyright © 2020 </li>
-
-
-          </ul>
-        </div>
 
       </div>
-    </div>
+    </footer>
 
-    </div>
-  </footer>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-  </script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
